embassy-executor/tests/ui/return_impl_send_nightly.stderr
error[E0277]: `impl Send` is not a future
 --> tests/ui/return_impl_send_nightly.rs:3:1
  |
3 | #[embassy_executor::task]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | `impl Send` is not a future
  | return type was inferred to be `impl Send` here
  |
  = help: the trait `Future` is not implemented for `impl Send`
